<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:layout_anchorGravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/background_clr"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/image"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/wcl_to_shield"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/group_wlc_ic"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termsPolicyTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/agree_continue_btn"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/terms_cond_privacy_policy"
                android:textAlignment="center"
                android:textColorLink="@color/color_yellow"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/agree_continue_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:background="@drawable/background_in_rectangle_shap_white"
                android:fontFamily="@font/manrope_semibold"
                android:gravity="center"
                android:text="@string/agree_and_continue"
                android:textColor="@color/background_clr"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/color_background_primary">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:minHeight="256dp"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="10dp">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_header"
                            android:textAppearance="@style/TextAppearance.Conversations.Title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/do_you_have_an_account"
                            android:textAppearance="@style/TextAppearance.Conversations.Body1" />

                        <Button
                            android:id="@+id/register_new_account"
                            style="@style/Widget.Conversations.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/create_new_account"
                            android:textColor="?colorAccent" />

                        <Button
                            android:id="@+id/use_existing"
                            style="@style/Widget.Conversations.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="@string/i_already_have_an_account"
                            android:textColor="?android:textColorSecondary" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/linearLayout"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:padding="8dp"
                            android:src="@drawable/main_logo" />
                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</layout>